benchmarks/NPB3.3-SER-C/EP/ep.error
gcc  -c -I../common -g -Wall -O3 -mcmodel=medium ep.c
ep.c: In function 'main':
ep.c:126:19: error: lvalue required as unary '&' operand
   dum[0] = randlc(&(long double)dum[1], (long double)dum[2]);
                   ^
ep.c:138:13: warning: passing argument 2 of 'vranlc' from incompatible pointer type
   vranlc(0, &t1, A, x);
             ^
In file included from ep.c:53:0:
../common/randdp.h:5:6: note: expected 'double *' but argument is of type 'long double *'
 void vranlc( int n, double *x, double a, double y[] );
      ^
ep.c:147:17: warning: passing argument 1 of 'randlc' from incompatible pointer type
     t2 = randlc(&t1, t1);
                 ^
In file included from ep.c:53:0:
../common/randdp.h:4:8: note: expected 'double *' but argument is of type 'long double *'
 double randlc( double *x, double a );
        ^
ep.c:177:39: warning: passing argument 1 of 'randlc' from incompatible pointer type
       if ((2 * ik) != kk) t3 = randlc(&t1, t2);
                                       ^
In file included from ep.c:53:0:
../common/randdp.h:4:8: note: expected 'double *' but argument is of type 'long double *'
 double randlc( double *x, double a );
        ^
ep.c:179:19: warning: passing argument 1 of 'randlc' from incompatible pointer type
       t3 = randlc(&t2, t2);
                   ^
In file included from ep.c:53:0:
../common/randdp.h:4:8: note: expected 'double *' but argument is of type 'long double *'
 double randlc( double *x, double a );
        ^
ep.c:187:20: warning: passing argument 2 of 'vranlc' from incompatible pointer type
     vranlc(2 * NK, &t1, A, x);
                    ^
In file included from ep.c:53:0:
../common/randdp.h:5:6: note: expected 'double *' but argument is of type 'long double *'
 void vranlc( int n, double *x, double a, double y[] );
      ^
ep.c:258:3: warning: format '%lf' expects argument of type 'double', but argument 2 has type 'long double' [-Wformat=]
   printf("CPU Time =%10.4lf\n", tm);
   ^
ep.c:260:3: warning: format '%lf' expects argument of type 'double', but argument 2 has type 'long double' [-Wformat=]
   printf("No. Gaussian Pairs = %15.0lf\n", gc);
   ^
ep.c:261:3: warning: format '%lE' expects argument of type 'double', but argument 2 has type 'long double' [-Wformat=]
   printf("Sums = %25.15lE %25.15lE\n", sx, sy);
   ^
ep.c:261:3: warning: format '%lE' expects argument of type 'double', but argument 3 has type 'long double' [-Wformat=]
ep.c:276:5: warning: format '%lf' expects argument of type 'double', but argument 2 has type 'long double' [-Wformat=]
     printf("\nTotal time:     %9.3lf (%6.2lf)\n", tt, tt*100.0/tm);
     ^
ep.c:276:5: warning: format '%lf' expects argument of type 'double', but argument 3 has type 'long double' [-Wformat=]
ep.c:278:5: warning: format '%lf' expects argument of type 'double', but argument 2 has type 'long double' [-Wformat=]
     printf("Gaussian pairs: %9.3lf (%6.2lf)\n", tt, tt*100.0/tm);
     ^
ep.c:278:5: warning: format '%lf' expects argument of type 'double', but argument 3 has type 'long double' [-Wformat=]
ep.c:280:5: warning: format '%lf' expects argument of type 'double', but argument 2 has type 'long double' [-Wformat=]
     printf("Random numbers: %9.3lf (%6.2lf)\n", tt, tt*100.0/tm);
     ^
ep.c:280:5: warning: format '%lf' expects argument of type 'double', but argument 3 has type 'long double' [-Wformat=]
make[1]: *** [Makefile:20: ep.o] Error 1
make[1]: Leaving directory '/usr/WS1/guo8/home1/clang-llvm/clang-tools-extra/pLiner/benchmarks/NPB3.3-SER-C/EP'
make: *** [Makefile:39: ep] Error 2

